regression/parse_pool/progtest3.sfp.out

sfc in program parse_pool/progtest3.sfp
syntax error at line 2, position 21:
configuration hello test_blink() nullNet() nullMac() nullRadio() } 
                    ^
